tests/res/has/error_and_bare.say
trait Foo { req a; }
say d = { a: 1 };
d has Foo & Bar; // error: A `has` value must be a literal, `is T`, `has T`, or a nested shape; did you mean `has Bar`?
